list profit centers api , swagger docs, route added
