# openapi.json
@@ -3422,6 +3422,55 @@
           }
         }
       }
+    },
+    "/profitCenter": {
+      "get": {
+        "summary": "Retrieve list of all profit centers",
+        "tags": ["Profit Center"],
+        "operationId": "getProfitCenterList",
+        "parameters": [
+          {
+            "name": "pageNumber",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "pageSize",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "sortColumn",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "sortOrder",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "searchString",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Array of Profit Center",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/ProfitCenter"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
@@ -3876,6 +3925,35 @@
             "type": "number"
           }
         }
+      },
+      "ProfitCenter": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "number"
+          },
+          "name": {
+            "type": "string"
+          },
+          "userId": {
+            "type": "number"
+          },
+          "address": {
+            "type": "string"
+          },
+          "code": {
+            "type": "string"
+          },
+          "faxNumber": {
+            "type": "number"
+          },
+          "contactNo": {
+            "type": "string"
+          },
+          "centerNumber": {
+            "type": "number"
+          }
+        }
       }
     },
     "requestBodies": {
@@ -4291,6 +4369,40 @@
           }
         },
         "required": true
+      },
+      "ProfitCenter": {
+        "description": "Information about the Profit Center of FTRV",
+        "content": {
+          "application/json": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "type": "string"
+                },
+                "userId": {
+                  "type": "number"
+                },
+                "address": {
+                  "type": "string"
+                },
+                "code": {
+                  "type": "string"
+                },
+                "faxNumber": {
+                  "type": "number"
+                },
+                "contactNo": {
+                  "type": "string"
+                },
+                "centerNumber": {
+                  "type": "number"
+                }
+              }
+            }
+          }
+        },
+        "required": true
       }
     },
     "responses": {
@@ -4355,6 +4467,17 @@
           "application/json": {
             "schema": {
               "$ref": "#/components/schemas/JobApplicant"
+            }
+          }
+        },
+        "required": true
+      },
+      "profitCenter": {
+        "description": "Information about the profit center of FTRV",
+        "content": {
+          "application/json": {
+            "schema": {
+              "$ref": "#/components/schemas/ProfitCenter"
             }
           }
         },
